--- a/popup.html
+++ b/popup.html
@@ -4,22 +4,74 @@
   <meta charset="UTF-8">
   <title>Hello World</title>
   <style>
-    body { font-family: Arial, sans-serif; min-width: 200px; min-height: 100px; display: flex; align-items: center; justify-content: center; }
+    body { 
+      font-family: Arial, sans-serif; 
+      min-width: 400px; 
+      min-height: 200px; 
+      padding: 16px;
+    }
+    .section {
+      margin-bottom: 16px;
+      padding: 8px;
+      border: 1px solid #ddd;
+      border-radius: 4px;
+    }
+    .section h3 {
+      margin-top: 0;
+      margin-bottom: 8px;
+    }
+    input, button {
+      margin: 4px;
+      padding: 4px 8px;
+    }
+    #messages, #ai-analysis {
+      width: 100%;
+      min-height: 100px;
+      max-height: 300px;
+      overflow-y: auto;
+      border: 1px solid #ccc;
+      padding: 8px;
+      margin-top: 8px;
+      background: #f9f9f9;
+    }
+    pre {
+      white-space: pre-wrap;
+      word-wrap: break-word;
+    }
   </style>
 </head>
 <body>
-  <h1>Hello, World!</h1>
-  <button id="google-signin">Sign in with Google</button>
-  <button id="fetch-messages">Fetch WhatsApp Messages</button>
-  <div id="messages" style="margin-top: 16px; max-height: 200px; overflow-y: auto;"></div>
-  <hr>
-  <div>
+  <div class="section">
+    <h3>WhatsApp Messages</h3>
+    <button id="fetch-messages">Fetch WhatsApp Messages</button>
+    <button id="analyze-messages">Analyze WhatsApp Messages</button>
+    <div id="messages"></div>
+  </div>
+
+  <div class="section">
     <h3>Google Sheets Settings</h3>
-    <input type="text" id="spreadsheet-id" placeholder="Enter Spreadsheet ID">
+    <input type="text" id="spreadsheet-id" placeholder="Paste Google Sheets URL here">
     <input type="text" id="sheet-name" placeholder="Sheet Name (optional, reads all if blank)">
     <button id="save-settings">Save Settings</button>
     <button id="read-sheet">Read Sheet Data</button>
   </div>
+
+  <div class="section">
+    <h3>Google Authentication</h3>
+    <button id="google-signin">Sign in with Google</button>
+  </div>
+
+  <div class="section">
+    <h3>AI Settings</h3>
+    <input type="password" id="ai-api-key" placeholder="Enter Google Gemini API Key">
+    <button id="save-ai-key">Save AI Key</button>
+  </div>
+
+  <div class="section">
+    <h3>AI Analysis Results</h3>
+    <div id="ai-analysis"></div>
+  </div>
+
   <script src="popup.js"></script>
 </body>
 </html> 
