adding test suite for whatsapp rsvp response automation

--- a/popup.html
+++ b/popup.html
@@ -173,10 +173,17 @@
     <div id="calendar-docs-results"></div>
   </div>
 
+  <div class="section">
+    <h3>🧪 Testing</h3>
+    <button id="run-tests">Run Test Suite</button>
+    <div id="test-results"></div>
+  </div>
+
   <script src="popup.js"></script>
   <script src="sheets.js"></script>
   <script src="calendar.js"></script>
   <script src="docs.js"></script>
   <script src="aiProvider.js"></script>
+  <script src="tests.js"></script>
 </body>
 </html> 
