not totally working but commiting in new branch just in case

--- a/widget.html
+++ b/widget.html
@@ -57,11 +57,13 @@
       <div id="settings-menu" class="settings-menu hidden">
         <button id="sign-in-google">Sign in with Google</button>
         <button id="start-setup">Start RSVP Setup Wizard</button>
+        <button id="reset-chatbot">Reset Chatbot Wizard</button>
         <button id="run-tests">Run Test Suite</button>
       </div>
     </div>
   </div>
   
+  <script src="chatbotOnboarding.js"></script>
   <script src="widget.js"></script>
 </body>
 </html> 
